--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,12 @@
 /.vscode
 /.cache
 /.airam
+/.bin
+/public/assets
 composer.phar
 composer.lock
+package-lock.json
 .DS_Store
 Thumbs.db
 .phpunit.result.cache
+node_modules
