--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     },
     "require": {
+        "doctrine/orm": "^2.7",
         "egarciahz/airam-framework": "dev-nightly"
     },
     "repositories": [
